--- a/nextjs-frontend/package.json
+++ b/nextjs-frontend/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "next": "latest",
+    "next-i18next": "^8.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tailwindcss-delicious-hamburgers": "^1.0.2"
